# simplepgmg

./: README.md  setup.cfg
simplepgmg/: __init__.py  main.py
