[metadata]
name = simplepgmg
version = 2.0.4
summary = A simple Python tool for applying and rolling back PostgreSQL database migrations.
home_page = https://github.com/JSheare/simplepgmg
author = Jacob Shearer
author_email = jacob.shearer6912@gmail.com


[options]
packages = 
	simplepgmg
python_requires = >=3.12
install_requires =
	psycopg[binary]

[options.entry_points]
console_scripts =
    simplepgmg = simplepgmg.main:main
	